welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:9: error: '<-' expected but ')' found.
		for (compteur<2) do 
                               ^Poucet:14: error: illegal start of simple expression
	}
        ^Poucet:15: error: 'while' expected but '}' found.
}
^