welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var compteur =0;

while(soriteTrouvée==false){
	do {
		if(estSurBiscuit=true){
			compteur= compteur+1
		}
		for (compteur<2) do 
		gauche();
		else
		droite();
		compteur=0
	}
}
